--- a/user-api/package.json
+++ b/user-api/package.json
@@ -11,12 +11,14 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "eslint-config-google": "^0.14.0",
     "jest": "^27.3.1",
     "supertest": "^6.1.6"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "eslint": ">=5.16.0",
     "express": "^4.17.1",
     "mongodb": "^4.2.0"
   }
