--- a/.github/workflows/user-api.yaml
+++ b/.github/workflows/user-api.yaml
@@ -21,5 +21,5 @@ jobs:
           node-version: 16.x
           cache: 'yarn'
           cache-dependency-path: user-api/package-lock.json
-      - run: yarn ci
+      - run: yarn install
       - run: yarn link
