--- a/.github/workflows/user-api.yaml
+++ b/.github/workflows/user-api.yaml
@@ -37,3 +37,27 @@ jobs:
           cache-dependency-path: user-api/package-lock.json
       - run: yarn install
       - run: yarn audit
+
+  test:
+    name: Teste de unidade e integração
+    runs-on: ubuntu-latest
+
+    services:
+      mongodb:
+        image: mongo
+        env:
+          MONGO_INITDB_ROOT_USERNAME: root
+          MONGO_INITDB_ROOT_PASSWORD: root
+        ports:
+          -27017:27017
+
+    steps:
+      - uses: actions/checkout@v2
+      - name: Use Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: 16.x
+          cache: 'yarn'
+          cache-dependency-path: user-api/package-lock.json
+      - run: yarn install
+      - run: yarn test -- --forceExit
