--- a/user-api/package.json
+++ b/user-api/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "audit": "^0.0.6",
     "body-parser": "^1.19.0",
+    "bson": "^4.6.4",
     "cors": "^2.8.5",
     "eslint": ">=5.16.0",
     "express": "^4.17.1",
