--- a/user-api/package.json
+++ b/user-api/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "clear:db": "node src/clear.database",
     "start": "node src/server.js",
-    "test": "jest --watchAll --detectOpenHandles",
+    "test": "jest",
     "lint": "eslint src/**",
     "lint:fix": "eslint src/** --fix"
   },
