--- a/.github/workflows/user-admin.yaml
+++ b/.github/workflows/user-admin.yaml
@@ -1,17 +1,13 @@
 name: User Admin CI
 on:
   push:
-    branches:
-      [ "Master" ]
-
+    branches: [ "Master" ]
   pull_request:
-    branches:
-      [ "Master" ]
+    branches: [ "Master" ]
 
 defaults:
   run:
     working-directory: user-admin
-
 
 jobs:
   lint:
