--- a/.github/workflows/user-admin.yaml
+++ b/.github/workflows/user-admin.yaml
@@ -1,9 +1,9 @@
 name: User Admin CI
 on:
   push:
-    branches: ["Master"]
+    branches: ["master"]
   pull_request:
-    branches: ["Master"]
+    branches: ["master"]
 
 defaults:
   run:
