--- a/.github/workflows/user-admin.yaml
+++ b/.github/workflows/user-admin.yaml
@@ -14,7 +14,7 @@ jobs:
     name: Análise estática
     runs-on: ubuntu-latest
     steps:
-      - uses: action/checkout@v2
+      - uses: actions/checkout@v2
       - name: Use Node.js
         uses: actions/setup-node@v2
         with:
@@ -28,7 +28,7 @@ jobs:
     name: Análise vulnerabilidade
     runs-on: ubuntu-latest
     steps:
-      - uses: action/checkout@v2
+      - uses: actions/checkout@v2
       - name: Use Node.js
         uses: actions/setup-node@v2
         with:
