--- a/.github/workflows/user-admin.yaml
+++ b/.github/workflows/user-admin.yaml
@@ -58,7 +58,7 @@ jobs:
       - name: run cypress
         uses: cypress-io/github-action@v2
         with:
-          config-file: cypress.config.ts
+          config-file: cypress.config.js
           build: yarn build
           start: yarn start
           working-directory: user-admin
