--- a/.github/workflows/user-admin.yaml
+++ b/.github/workflows/user-admin.yaml
@@ -53,7 +53,7 @@ jobs:
         uses: actions/checkout@v2
       - name: Starts API server in background
         run:
-          yarn --prefix ../user-api add
+          npm --prefix ../user-api ci
           yarn --prefix ../user-api start &
       - name: run cypress
         uses: cypress-io/github-action@v2
